<resources>
    <string name="app_name">Tugas</string>
    <string name="judul">PENDAFTARAN</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="L">Laki-Laki</string>
    <string name="P">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="islam">Islam</string>
    <string name="katolik">Katolik</string>
    <string name="kristen">Kristen</string>
    <string name="hindu">Hindu</string>
    <string name="buddha">Buddha</string>
    <string name="konghucu">Konghucu</string>
    <string name="aliran">Aliran Kepercayaan</string>
    <string name="telpon">Telepon</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="pass2">Masukkan Password Kembali</string>
    <string name="kembali">KEMBALI</string>
    <string name="daftar">DAFTAR</string>
</resources>
